# factor-estimation

./: .gitignore  README.md  pyproject.toml  start.sh  start_architecture_comparison.sh  start_clustered_hybrid_experiments.sh  start_elasticnet_experiment.sh  start_elasticnet_refined_experiment.sh  start_feature_extraction.sh  start_model_implied_series.sh  start_nowcast.sh  start_per_factor_elasticnet_experiment.sh
config/: default.yaml
config/experiments/: deep_sequence.yaml  research.yaml  tft_patchtst_5d_expanded.yaml  tft_patchtst_daily.yaml  (+2 more)
scripts/: generate_elasticnet_validation_report.py  generate_performance_report.py  run_baseline.py
tests/: test_alignment.py  test_attribution.py  test_availability.py  test_config_cleanup.py  test_data_famafrench.py  test_data_yfinance.py  test_elasticnet_validation.py  test_experiments.py  test_factor_viewer.py  test_feature_extraction.py  test_feature_extraction_no_leakage.py  test_features.py  test_market_only_config.py  test_model_implied_series.py  test_model_pruning.py  test_momentum_features.py  test_no_leakage.py  test_nowcast_dataset.py  test_nowcast_engine.py  test_nowcast_runner.py  test_performance_analysis.py  test_production_factor_lags.py  test_production_market_only_config.py  test_proxy_features.py  test_regime_evaluation.py  test_release_gap_backtest.py  test_residual_analysis.py  test_rolling_train.py  test_sequence_dataset.py  test_target_features.py  test_target_transform.py  test_torch_models.py  test_torch_train_no_leakage.py  test_walk_forward.py  test_walk_forward_validation.py
(+108 files in other folders)
