[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ff5-predictor"
version = "0.1.0"
description = "Nowcaster for daily Fama-French 5-factor values using market data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14",
  "PyYAML>=6",
  "requests>=2.31",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "torch>=2.2,<2.7",
  "tqdm>=4.66",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
famafrench = ["getFamaFrenchFactors>=0.0.5"]
plot = ["matplotlib>=3.8"]

[project.scripts]
ff5-predictor = "ff5_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
